--- a/app.json
+++ b/app.json
@@ -9,7 +9,8 @@
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#ffffff",
+      "borderRadius": 10
     },
     "assetBundlePatterns": [
       "**/*"
